--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -61,7 +61,7 @@
             </select>
             <input type="text" class="form-control header-fc" placeholder="통합검색" name="keyword"
                    th:value="${SearchPageRequestDTO?.keyword}">
-            <button class="btn searchBtn header-sb" type="submit"><i
+            <button class="searchBtn header-sb" type="submit"><i
                     class="bi bi-search"></i>
             </button>
         </form>
