--- a/src/main/resources/templates/my/user-modify.html
+++ b/src/main/resources/templates/my/user-modify.html
@@ -128,10 +128,10 @@
                     <div class="blank"></div>
 
                     <div class="d-flex justify-content-evenly">
-                        <button type="submit" class="modi-button btn mb-4">
+                        <button type="submit" class="modi-button mb-4">
                             저장
                         </button>
-                        <button class="cancel-button btn mb-4"
+                        <button class="cancel-button mb-4"
                                 th:onclick="|location.href='@{/}'|">
                             <span>닫기</span>
                         </button>
