--- a/src/main/resources/static/css/board/read.css
+++ b/src/main/resources/static/css/board/read.css
@@ -54,6 +54,16 @@ body {
 .postContent {
     min-height: 250px   ;
     max-width: 100%;
+    margin-top: 60px;
+    margin-bottom: 100px;
+    overflow-x: hidden;
+}
+
+.postContentQ {
+    min-height: 250px   ;
+    max-width: 100%;
+    margin-top: 20px;
+    margin-bottom: 100px;
     overflow-x: hidden;
 }
 
