--- a/src/main/resources/static/css/report/createReport.css
+++ b/src/main/resources/static/css/report/createReport.css
@@ -5,7 +5,6 @@ body {
     overflow-y: hidden;
     display: flex;
     align-items: flex-start;
-
 }
 
 h1 {
@@ -16,7 +15,7 @@ h1 {
 .report-detail {
     padding: 20px;
     width: 500px;
-    margin-top: 0px;
+    margin-top: 0;
     box-sizing: border-box; /* 패딩 포함 너비 계산 */
 }
 
