--- a/src/main/resources/static/css/user/findId.css
+++ b/src/main/resources/static/css/user/findId.css
@@ -1,3 +1,7 @@
+body {
+    min-width: 1200px; /* 고정 최소 너비 설정 */
+}
+
 .container,
 .container > div {
     height: 960px;
@@ -15,6 +19,7 @@
 
 h1 {
     color: #67cafe;
+    font-size: 40px;
 }
 
 .findIdContent {
@@ -22,8 +27,8 @@ h1 {
 }
 
 .find-button {
-    background-color: #67cafe;
-    border: 1px solid #67cafe;
+    background-color: #83d9ff;
+    border: none;
     color: white;
     border-radius: 0.375rem;
     width: 400px;
@@ -31,24 +36,20 @@ h1 {
 }
 
 .login-button {
-    background-color: white;
-    border: 1px solid #67cafe;
+    background-color: #b4e7ff;
+    border: none;
     border-radius: 0.375rem;
-    color: #67cafe;
+    color: white;
     width: 400px;
     height: 65px;
 }
 
 .find-button:hover {
-    background-color: white;
-    color: #67cafe;
-    border: 1px solid #67cafe;
+    background-color: #67cafe;
 }
 
 .login-button:hover {
     background-color: #67cafe;
-    color: white;
-    border: 1px solid #67cafe;
 }
 
 
