--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -83,9 +83,6 @@
                             </div>
                         </td>
                         <td class="align-middle text-end count">
-                            <div th:if="${postDTO.replyAuth==true} and ${postDTO.completeQna==false} and (${username}==${postDTO.userId})">
-                                <button class="btn completeBtn">답변 완료</button>
-                            </div>
                             <div>
                                 <span>조회수</span>
                                 <span th:text="${postDTO?.viewCount}"></span>
@@ -99,9 +96,17 @@
                     </tbody>
                 </table>
             </div> <!--글제목-->
-
+            <!--답변 완료 버튼-->
+            <div class="d-flex flex-row justify-content-end">
+                <div th:if="${postDTO.replyAuth==true} and ${postDTO.completeQna==false} and (${username}==${postDTO.userId})">
+                    <button class="btn completeBtn">답변 완료</button>
+                </div>
+            </div>
             <!--글내용-->
-            <div th:utext="${postDTO.postContent}" class="mx-4 my-5 postContent"></div>
+            <div th:if="${postDTO.replyAuth==false} or ${postDTO.completeQna==true}"
+                 th:utext="${postDTO.postContent}" class="mx-4 postContent"></div>
+            <div th:if="${postDTO.replyAuth==true} and ${postDTO.completeQna==false} and (${username}==${postDTO.userId})"
+                 th:utext="${postDTO.postContent}" class="mx-4 postContentQ"></div>
             <!--좋아요/싫어요/보관/신고 버튼-->
             <div class="mt-3 justify-content-center text-center">
                 <div class="d-flex justify-content-center">
