--- a/src/main/resources/templates/board/register_q.html
+++ b/src/main/resources/templates/board/register_q.html
@@ -55,8 +55,7 @@
             </div>
             <div>
                 <small class="text-muted">
-                    * 수의사를 답변자로 선택한 글에 답변이 등록되면 '수의사<img src="/img/tag/vetScope.png" alt="수의사태그" width="20">'아이콘이
-                    '답변완료<img src="/img/tag/completeQna.png" alt="답변완료" width="20">' 아이콘으로 변경됩니다.
+                    * 수의사를 답변자로 선택한 글에 답변이 달릴 경우, '답변완료'를 클릭하면 답변완료 '<img src="/img/tag/completeQna.png" alt="답변완료" width="20">' 아이콘으로 변경됩니다.
                 </small>
             </div>
             <div class="mb-2">
