--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -45,14 +45,13 @@
 
 </div>
 
-<div class="container" style="height: 960px">
-    <div class="d-flex justify-content-center align-items-center" style="height: 960px">
-        <div style="height: 800px; width: 700px;">
-            <div class="d-flex justify-content-center align-items-center"
-                 style="height: 100px; width: 700px;">
-                <h1 style="color: #67cafe"><b>로그인</b></h1>
+<div class="container">
+    <div class="d-flex justify-content-center align-items-center">
+        <div>
+            <div class="d-flex justify-content-center align-items-center loginTitle">
+                <h1>로그인</h1>
             </div>
-            <div class="d-flex justify-content-center align-items-center" style="height: 300px;">
+            <div class="d-flex justify-content-center align-items-center loginForm">
                 <form class="d-flex flex-column justify-content-center">
                     <div>
                         <label>아이디</label>
@@ -62,7 +61,7 @@
                         <label>비밀번호</label>
                         <input type="password" name="password" id="password" class="form-control">
                     </div>
-                    <div class="d-flex justify-content-evenly align-items-center" style="height: 65px;">
+                    <div class="d-flex justify-content-evenly align-items-center loginOption">
                         <div>
                             <label>
                                 <input type="checkbox" name="autoLogin" id="autoLogin" class="d-inline" checked>
@@ -79,7 +78,7 @@
                     </button>
                 </form>
             </div>
-            <div class="d-flex justify-content-evenly align-items-center" style="height: 50px;">
+            <div class="d-flex justify-content-evenly align-items-center joinFind">
                 <a href="/user/join">회원가입</a>
                 <div class="d-flex justify-content-between">
                     <a href="/user/find-id">아이디찾기 </a>
@@ -88,7 +87,7 @@
                 </div>
             </div>
 
-            <div class="d-flex flex-column justify-content-evenly align-items-center" style="height: 300px;">
+            <div class="d-flex flex-column justify-content-evenly align-items-center loginSocial">
                 <button class="kakao" onclick="location.href='/oauth2/authorization/kakao'">
                     <img th:src="@{/img/login/kakao/img.png}" width=40 height=40 alt="카카오">카카오로그인
                 </button>
