--- a/src/main/resources/templates/board/register_q.html
+++ b/src/main/resources/templates/board/register_q.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/board/register.css}">
 
-    <title>말랑발자국 - 글 등록</title>
+    <title>말랑발자국 - QnA 글쓰기</title>
 </head>
 
 <body>
