--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -341,7 +341,7 @@
 
 
                 <div class="ms-4 mb-4 p-4 currentHotBoard">
-                        <p class="boardTitle px-2 bestPost">실시간 인기 게시글</p>
+                        <p class="boardTitle px-2 bestPost">실시간 인기 게시물</p>
                         <hr class="boardHr">
                         <div class="board" th:if="${!todayList.isEmpty()}">
                             <table class="table read">
