readDetail 코드 정리 read 페이지 list 버튼 동작 수정

--- a/src/main/resources/static/css/board/read.css
+++ b/src/main/resources/static/css/board/read.css
@@ -52,19 +52,14 @@ body {
 }
 
 .postContent {
-    min-height: 250px   ;
+    min-height: 250px;
     max-width: 100%;
-    margin-top: 60px;
     margin-bottom: 100px;
     overflow-x: hidden;
 }
 
-.postContentQ {
-    min-height: 250px   ;
-    max-width: 100%;
-    margin-top: 20px;
-    margin-bottom: 100px;
-    overflow-x: hidden;
+.completeBtnSection {
+    height: 60px;
 }
 
 .bi-hand-thumbs-up {
