--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -46,21 +46,21 @@
                     <tbody>
                     <tr class="justify-content-center">
                         <td class="read-one">
-                                <span class="align-middle" th:if="${postDTO.replyAuth==true}">
-                                        <img class="replyAuthImg" th:src="${postDTO.completeQna ? '/img/tag/completeQna.png' : '/img/tag/vetScope.png'}"
-                                             th:alt="${postDTO.completeQna ? '답변 완료' : '수의사만 답변 가능'}">
-                                </span>
-                                <span>
+                            <span class="align-middle" th:if="${postDTO.replyAuth==true}">
+                                <img class="replyAuthImg" th:src="${postDTO.completeQna ? '/img/tag/completeQna.png' : '/img/tag/vetScope.png'}"
+                                     th:alt="${postDTO.completeQna ? '답변 완료' : '수의사만 답변 가능'}">
+                            </span>
+                            <span>
                                     <img class="tag" src="/img/tag/tag_dog.png" th:if="${postDTO.postTag eq '강아지'}"
                                          alt="강아지태그">
                                     <img class="tag" src="/img/tag/tag_cat.png" th:if="${postDTO.postTag eq '고양이'}"
                                          alt="고양이태그">
-                                </span>
-                                <span class="readTitle" th:text="${postDTO.postTitle}">
-                                </span>
-                                <span class="icon secret" th:if="${postDTO.secret != false}">
+                            </span>
+                            <span class="readTitle" th:text="${postDTO.postTitle}">
+                            </span>
+                            <span class="icon secret" th:if="${postDTO.secret != false}">
                                     <i class="bi bi-file-lock"></i>
-                                </span>
+                            </span>
                             <br>
                             <div class="readTitle sub">
                                 <span th:text="${postDTO.nickname}">작성자</span>
@@ -86,7 +86,7 @@
                             <div>
                                 <span>조회수</span>
                                 <span th:text="${postDTO?.viewCount}"></span>
-                                <span>추천수</span>
+                                <span>좋아요</span>
                                 <span th:text="${postDTO?.likeCount}"></span>
                                 <span>댓글수</span>
                                 <span th:text="${postDTO?.replyCount}"></span>
@@ -97,16 +97,13 @@
                 </table>
             </div> <!--글제목-->
             <!--답변 완료 버튼-->
-            <div class="d-flex flex-row justify-content-end">
+            <div class="d-flex flex-row justify-content-end completeBtnSection">
                 <div th:if="${postDTO.replyAuth==true} and ${postDTO.completeQna==false} and (${username}==${postDTO.userId})">
                     <button class="btn completeBtn">답변 완료</button>
                 </div>
             </div>
             <!--글내용-->
-            <div th:if="${postDTO.replyAuth==false} or ${postDTO.completeQna==true}"
-                 th:utext="${postDTO.postContent}" class="mx-4 postContent"></div>
-            <div th:if="${postDTO.replyAuth==true} and ${postDTO.completeQna==false} and (${username}==${postDTO.userId})"
-                 th:utext="${postDTO.postContent}" class="mx-4 postContentQ"></div>
+            <div th:utext="${postDTO.postContent}" class="mx-4 postContent"></div>
             <!--좋아요/싫어요/보관/신고 버튼-->
             <div class="mt-3 justify-content-center text-center">
                 <div class="d-flex justify-content-center">
@@ -467,16 +464,23 @@
 <script>
     $(document).ready(function () {
 
-        const currentUrl = window.location.href;
         const referrerUrl = document.referrer;
-        const excludePattern = '/board/read/';
+        const excludePatterns = ['/board/read/', '/board/modify/', '/board/modify_q/'];
 
-        // read 페이지에 접속한 경로 저장
-        if(referrerUrl!==currentUrl && !referrerUrl.includes(excludePattern)) {
+        let excludePattern = true;
+        for (const pattern of excludePatterns) {
+            if (referrerUrl.includes(pattern)) {
+                excludePattern = false;
+                break;
+            }
+        }
+
+        // excludePatterns 에 해당 하지않는 경우에만 read 페이지에 접속한 경로 저장
+        if(excludePattern) {
             sessionStorage.setItem('previousUrl', document.referrer);
         }
 
-        //listBtn 버튼 클릭 이벤트
+        // listBtn 버튼 클릭 이벤트
         $(".listBtn").on("click", function (e) {
             e.preventDefault();
 
@@ -485,11 +489,13 @@
             let previousUrl = sessionStorage.getItem('previousUrl');
 
             let boardUrl = '/board/' + boardCode;
+            let myPageUrl = '/my/userActivity/';
+            let allSearch = 'allSearch';
 
-            if (previousUrl.includes(boardUrl)) {
-                window.location.href = boardUrl + '?page=' + page;
-            } else {
+            if (previousUrl.includes(myPageUrl) || previousUrl.includes(allSearch)){
                 window.location.href = previousUrl;
+            } else {
+                window.location.href = boardUrl + '?page=' + page;
             }
         });
 
